fixed submit bug (ENTER keystroke would not activate event listener); begin mobile screen optimization

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,7 @@
 }
 
 #gif-catcher {
-    padding-top: 15px;
-    padding-left: 300px;
+    margin-top: 15px;
+    margin-left: 300px;
+    min-width: 355px;
 }
